--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,9 +6,35 @@
 
 </h:head>
 <h:body>
-	<h:form>
-		<h:outputLabel>Olá JSF</h:outputLabel>
-	</h:form>	
+	
+<h:form>
+	<h:panelGrid columns="2">
+	
+		<h:outputLabel>ID:</h:outputLabel>
+		<h:inputText readonly="true" value="#{usuarioPessoaManagedBean.usuarioPessoa.id}" />
+		
+		<h:outputLabel>Nome:</h:outputLabel>
+		<h:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.nome}" />	
+		
+		<h:outputLabel>Sobrenome:</h:outputLabel>
+		<h:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.sobreNome}" />
+		
+		<h:outputLabel>Idade:</h:outputLabel>
+		<h:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.idade}" />
+		
+		<h:outputLabel>E-mail:</h:outputLabel>
+		<h:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.email}" />
+		
+		<h:outputLabel>Login:</h:outputLabel>
+		<h:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.login}" />
+		
+		<h:outputLabel>Senha:</h:outputLabel>
+		<h:inputSecret  value="#{usuarioPessoaManagedBean.usuarioPessoa.senha}" />
+			
+		
+	</h:panelGrid>
+</h:form>
+	
 </h:body>
 </html>
 
