--- a/src/main/webapp/primefaces.xhtml
+++ b/src/main/webapp/primefaces.xhtml
@@ -11,36 +11,36 @@
 	
 <h:form>
 	<h:messages showDetail="true" />
-	<h:panelGrid columns="2">
+	<p:panelGrid columns="2">
 	
 		<h:outputLabel>ID:</h:outputLabel>
-		<h:inputText readonly="true" value="#{usuarioPessoaManagedBean.usuarioPessoa.id}" />
+		<p:inputText readonly="true" value="#{usuarioPessoaManagedBean.usuarioPessoa.id}" />
 		
 		<h:outputLabel>Nome:</h:outputLabel>
-		<h:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.nome}" />	
+		<p:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.nome}" />	
 		
 		<h:outputLabel>Sobrenome:</h:outputLabel>
-		<h:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.sobreNome}" />
+		<p:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.sobreNome}" />
 		
 		<h:outputLabel>Idade:</h:outputLabel>
-		<h:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.idade}" />
+		<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.idade}" />
 		
 		<h:outputLabel>E-mail:</h:outputLabel>
-		<h:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.email}" />
+		<p:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.email}" />
 		
 		<h:outputLabel>Login:</h:outputLabel>
-		<h:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.login}" />
+		<p:inputText  value="#{usuarioPessoaManagedBean.usuarioPessoa.login}" />
 		
 		<h:outputLabel>Senha:</h:outputLabel>
-		<h:inputSecret  value="#{usuarioPessoaManagedBean.usuarioPessoa.senha}" />
+		<p:password  value="#{usuarioPessoaManagedBean.usuarioPessoa.senha}" />
 			
 		
-	</h:panelGrid>
+	</p:panelGrid>
 	
-	<h:commandButton value="Salvar" action="#{usuarioPessoaManagedBean.salvar}"></h:commandButton>
-	<h:commandButton value="Novo" action="#{usuarioPessoaManagedBean.novo}"></h:commandButton>
+	<p:commandButton value="Salvar" action="#{usuarioPessoaManagedBean.salvar}"></p:commandButton>
+	<p:commandButton value="Novo" action="#{usuarioPessoaManagedBean.novo}"></p:commandButton>
 	
-	<h:dataTable value="#{usuarioPessoaManagedBean.list}" var="user" cellpadding="15" border="1">
+	<p:dataTable value="#{usuarioPessoaManagedBean.list}" var="user" cellpadding="15" border="1">
 		<f:facet name="header">Lista de Usuários</f:facet>
 		
 		<h:column>
@@ -87,7 +87,7 @@
 			</h:commandLink>
 		</h:column>
 		
-	</h:dataTable>
+	</p:dataTable>
 	
 </h:form>
 	
