--- a/src/main/webapp/primefaces.xhtml
+++ b/src/main/webapp/primefaces.xhtml
@@ -9,10 +9,17 @@
 </h:head>
 <h:body>
 	
+	<h:form>
+		<p:breadCrumb>
+		<p:menuitem />
+			<p:menuitem value="Página JSF" action="index.jsf" />
+			<p:menuitem value="Página PrimeFaces" action="primefaces.jsf" />
+		</p:breadCrumb>
+	</h:form>
+	
 <h:form>
 	<h:messages showDetail="true" />
-	<p:panelGrid columns="2">
-	
+	 <p:panelGrid columns="2">
 		<h:outputLabel>ID:</h:outputLabel>
 		<p:inputText readonly="true" value="#{usuarioPessoaManagedBean.usuarioPessoa.id}" />
 		
@@ -33,8 +40,7 @@
 		
 		<h:outputLabel>Senha:</h:outputLabel>
 		<p:password  value="#{usuarioPessoaManagedBean.usuarioPessoa.senha}" />
-			
-		
+				
 	</p:panelGrid>
 	
 	<p:commandButton value="Salvar" action="#{usuarioPessoaManagedBean.salvar}"></p:commandButton>
