--- a/src/main/webapp/telefone.xhtml
+++ b/src/main/webapp/telefone.xhtml
@@ -7,24 +7,34 @@
 <h:head>
 	<h:outputLabel>JSF - PrimeFaces - Hibernate</h:outputLabel>
 </h:head>
-<h:body >
-	
+<h:body>
+
 	<h:form>
 		<p:breadCrumb>
-		<p:menuitem />
+			<p:menuitem />
 			<p:menuitem value="Página JSF" action="index.jsf" />
 			<p:menuitem value="Página PrimeFaces" action="primefaces.jsf" />
 		</p:breadCrumb>
 	</h:form>
-	
-<h:form id="formulario">
-	<h:messages showDetail="true" id="msg"/>
-	 
-	 <h1>Telefones</h1>
-	 <h:outputText value="#{telefoneManagedBean.user.nome}"/>
+
+	<h:form id="formulario">
+		<h:messages showDetail="true" id="msg" />
+
+		<h:panelGrid columns="2">
+			<h:outputLabel>Usuario</h:outputLabel>
+			<h:outputText value="#{telefoneManagedBean.user.nome}" />
+
+			<h:outputLabel>Número</h:outputLabel>
+			<h:inputText value="#{telefoneManagedBean.telefoneUser.numero}" />
+
+			<h:outputLabel>Tipo</h:outputLabel>
+			<h:inputText value="#{telefoneManagedBean.telefoneUser.tipo}" />
+		</h:panelGrid>
+
+		<br />
+		<br />
+		<h:commandButton value="Salvar" action="#{telefoneManagedBean.salvar}"></h:commandButton> 
 	</h:form>
-		
-	
 </h:body>
 </html>
 
